Created new Items app

--- a/puddle/core/templates/core/base.html
+++ b/puddle/core/templates/core/base.html
@@ -31,6 +31,15 @@
             <h3 class="mb-5 font-semibold text-gray-400">About</h3>
             <p class="text-lg text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in mi risus. Phasellus finibus tincidunt lobortis. In hac habitasse platea dictumst. Cras nec sapien massa. Sed congue iaculis felis quis </p>
         </div>
+        <div class="w-1/3">
+            <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
+            <ul>
+                <li><a href="#" class="text-lg text-teal-500  hover:bg-teal-700">About</a></li>
+                <li><a href="{% url 'contact' %}" class="text-lg text-teal-500  hover:bg-teal-700">Contact</a></li>
+                <li><a href="#" class="text-lg text-teal-500  hover:bg-teal-700">Privacy Policy</a></li>
+                <li><a href="#" class="text-lg text-teal-500  hover:bg-teal-700">Terms of Use</a></li>
+            </ul>
+        </div>
     </footer>
 
 </body>
