--- a/demo/myapp/templates/home.html
+++ b/demo/myapp/templates/home.html
@@ -1,7 +1,4 @@
-{% extends 'base.html' %}
-
-{% block title %} Home Page {% endblock %}
-
+{% extends 'base.html' %}{% block title %} Home Page {% endblock %}
 {% block content %}
-    <p>This is The Home page</p>
+<p>This is The Home page</p>
 {% endblock %}
