Fixed my simtakes

--- a/ecommerce_site/templates/index.html
+++ b/ecommerce_site/templates/index.html
@@ -89,7 +89,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-3">
                         <div class="logo">
-                            <a href="{% static 'index.html' %}">
+                            <a href="index.html">
                                 <img src="{% static 'img/logo.png' %}" alt="Logo">
                             </a>
                         </div>
@@ -102,11 +102,11 @@
                     </div>
                     <div class="col-md-3">
                         <div class="user">
-                            <a href="{% static 'wishlist.html' %}" class="btn wishlist">
+                            <a href="wishlist.html" class="btn wishlist">
                                 <i class="fa fa-heart"></i>
                                 <span>(0)</span>
                             </a>
-                            <a href="{% static 'cart.html' %}" class="btn cart">
+                            <a href="cart.html" class="btn cart">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>(0)</span>
                             </a>
@@ -345,7 +345,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-1.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -373,7 +373,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-2.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -401,7 +401,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-3.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -429,7 +429,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-4.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -457,7 +457,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-5.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -515,7 +515,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-6.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -543,7 +543,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-7.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -571,7 +571,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-8.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -599,7 +599,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-9.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
@@ -627,7 +627,7 @@
                                 </div>
                             </div>
                             <div class="product-image">
-                                <a href="{% static 'product-detail.html' %}">
+                                <a href="product-detail.html">
                                     <img src="{% static 'img/product-10.jpg' %}" alt="Product Image">
                                 </a>
                                 <div class="product-action">
