--- a/ecommerce_site/templates/checkout.html
+++ b/ecommerce_site/templates/checkout.html
@@ -89,7 +89,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-3">
                         <div class="logo">
-                            <a href="{% static 'index.html' %}">
+                            <a href="index.html">
                                 <img src="{% static 'img/logo.png' %}" alt="Logo">
                             </a>
                         </div>
@@ -102,11 +102,11 @@
                     </div>
                     <div class="col-md-3">
                         <div class="user">
-                            <a href="{% static 'wishlist.html' %}" class="btn wishlist">
+                            <a href="wishlist.html" class="btn wishlist">
                                 <i class="fa fa-heart"></i>
                                 <span>(0)</span>
                             </a>
-                            <a href="{% static 'cart.html' %}" class="btn cart">
+                            <a href="cart.html" class="btn cart">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>(0)</span>
                             </a>
