--- a/ecommerce_site/templates/my-account.html
+++ b/ecommerce_site/templates/my-account.html
@@ -89,7 +89,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-3">
                         <div class="logo">
-                            <a href="{% static 'index.html' %}">
+                            <a href="index.html">
                                 <img src="{% static 'img/logo.png' %}" alt="Logo">
                             </a>
                         </div>
@@ -102,11 +102,11 @@
                     </div>
                     <div class="col-md-3">
                         <div class="user">
-                            <a href="{% static 'wishlist.html' %}" class="btn wishlist">
+                            <a href="wishlist.html" class="btn wishlist">
                                 <i class="fa fa-heart"></i>
                                 <span>(0)</span>
                             </a>
-                            <a href="{% static 'cart.html' %}" class="btn cart">
+                            <a href="cart.html" class="btn cart">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>(0)</span>
                             </a>
@@ -140,7 +140,7 @@
                             <a class="nav-link" id="payment-nav" data-toggle="pill" href="#payment-tab" role="tab"><i class="fa fa-credit-card"></i>Payment Method</a>
                             <a class="nav-link" id="address-nav" data-toggle="pill" href="#address-tab" role="tab"><i class="fa fa-map-marker-alt"></i>address</a>
                             <a class="nav-link" id="account-nav" data-toggle="pill" href="#account-tab" role="tab"><i class="fa fa-user"></i>Account Details</a>
-                            <a class="nav-link" href="{% static 'index.html' %}"><i class="fa fa-sign-out-alt"></i>Logout</a>
+                            <a class="nav-link" href="index.html"><i class="fa fa-sign-out-alt"></i>Logout</a>
                         </div>
                     </div>
                     <div class="col-md-9">
