--- a/ecommerce_site/templates/product-detail.html
+++ b/ecommerce_site/templates/product-detail.html
@@ -92,7 +92,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-3">
                         <div class="logo">
-                            <a href="{% static 'index.html' %}">
+                            <a href="index.html">
                                 <img src="{% static 'img/logo.png' %}" alt="Logo">
                             </a>
                         </div>
@@ -105,11 +105,11 @@
                     </div>
                     <div class="col-md-3">
                         <div class="user">
-                            <a href="{% static 'wishlist.html' %}" class="btn wishlist">
+                            <a href="wishlist.html" class="btn wishlist">
                                 <i class="fa fa-heart"></i>
                                 <span>(0)</span>
                             </a>
-                            <a href="{% static 'cart.html' %}" class="btn cart">
+                            <a href="cart.html" class="btn cart">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>(0)</span>
                             </a>
@@ -298,7 +298,7 @@
                                             </div>
                                         </div>
                                         <div class="product-image">
-                                            <a href="{% static 'product-detail.htm' %}">
+                                            <a href="product-detail.html">
                                                 <img src="{% static 'img/product-10.jpg' %}" alt="Product Image">
                                             </a>
                                             <div class="product-action">
@@ -520,7 +520,7 @@
                                         </div>
                                     </div>
                                     <div class="product-image">
-                                        <a href="{% static 'product-detail.html">
+                                        <a href="product-detail.html">
                                             <img src="{% static 'img/product-9.jpg' %}" alt="Product Image">
                                         </a>
                                         <div class="product-action">
